# sift

./: .gitignore  .sift  CONTRIBUTING.md  LICENSE  README.md  config.json  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
src/: .sift  cli.py  config.py  gen_ai.py  generate_md.py  prompts.py  utils.py
tests/: .sift
