[tool.poetry]
name = "sift"
version = "0.1.0"
description = ""
authors = ["Frank Goortani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.41.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "W", "F"]
ignore = ["E203", "E266", "E501"]
